fix viral sharing for editor

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1385,7 +1385,7 @@ resourceTypes = {
         roleActions = ["delete", "read_policies", "share_policy::owner", "share_policy::editor", "own", "write"]
       }
       editor = {
-        roleActions = ["write", "share_policy::editor"]
+        roleActions = ["write"]
       }
     }
     reuseIds = false
@@ -1417,7 +1417,7 @@ resourceTypes = {
         roleActions = ["delete", "read_policies", "share_policy::owner", "share_policy::editor", "own", "write"]
       }
       editor = {
-        roleActions = ["write", "share_policy::editor"]
+        roleActions = ["write"]
       }
     }
     reuseIds = false
