--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,7 +86,7 @@ jobs:
 
       - name: Extract branch name
         shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        run: echo "Branch:: $(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
         id: extractBranch
 
       - name: Generate java client
