--- a/.github/workflows/verify_consumer_pacts.yml
+++ b/.github/workflows/verify_consumer_pacts.yml
@@ -142,8 +142,8 @@ jobs:
             echo "git branch"
             git branch
           else
-          echo "git checkout ${{ env.PROVIDER_BRANCH }}"
-            git checkout ${{ env.PROVIDER_BRANCH }}
+            echo "git checkout ${{ env.CURRENT_BRANCH }} ${{ env.CURRENT_SHA }}"
+            git checkout -b ${{ env.CURRENT_BRANCH }} ${{ env.CURRENT_SHA }}
           fi
           echo "git rev-parse HEAD"
           git rev-parse HEAD
