--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,7 @@ jobs:
 
   generateAndPublishClient:
     runs-on: ubuntu-20.04
-    needs: test
+    needs: run-unit-tests
 
     env:
       ARTIFACTORY_USERNAME: ${{secrets.ARTIFACTORY_USERNAME}}
@@ -82,22 +82,6 @@ jobs:
       - name: coursier-cache-action
         uses: coursier/cache-action@v5
 
-      - name: Extract branch name
-        shell: bash
-        id: extractBranch
-        run: |
-          GITHUB_EVENT_NAME=${{ github.event_name }}
-          if [[ "$GITHUB_EVENT_NAME" == "push" ]]; then
-            GITHUB_REF=${{ github.ref }}
-          elif [[ "$GITHUB_EVENT_NAME" == "pull_request" ]]; then
-            GITHUB_REF=refs/heads/${{ github.head_ref }}
-          else
-            echo "Failed to extract branch information"
-            exit 1
-          fi
-
-          echo "branch=$GITHUB_REF" >> $GITHUB_OUTPUT
-
       - name: Generate java client
         id: generateJavaClient
         run: bash scripts/gen_java_client.sh
@@ -105,11 +89,11 @@ jobs:
       - name: Publish java client for merge to develop branch
         working-directory: codegen_java
         id: publishJavaClient
-        if: ${{steps.extractBranch.outputs.branch == 'develop'}}
+        if: ${{ github.ref_name == 'develop' }}
         run: sbt "+ publish" -Dproject.isSnapshot=false
 
       - name: Publish java client as snapshot for PRs
         working-directory: codegen_java
         id: publishJavaClientSnapshot
-        if: ${{steps.extractBranch.outputs.branch != 'develop'}}
+        if: ${{ github.ref_name != 'develop' }}
         run: sbt "+ publish" -Dproject.isSnapshot=true
