--- a/.github/workflows/sam-build-tag-publish-and-run-tests.yaml
+++ b/.github/workflows/sam-build-tag-publish-and-run-tests.yaml
@@ -35,8 +35,10 @@ jobs:
         run: |-
           echo "github.ref ${{ github.ref }}"
           echo "github.ref_name ${{ github.ref_name }}"
-          echo "GITHUB_REF_NAME $GITHUB_REF_NAME"
+          echo "GITHUB_REF_NAME ${GITHUB_REF_NAME}"
           echo "github.ref_type ${{ github.ref_type }}"
+          echo "github.head_ref ${{ github.head_ref }}"
+          echo "github ${{ github }}"
 
       # Builds Sam elsewhere to protect secrets.  Upon success, will tag the commit in git.
       - name: dispatch build to terra-github-workflows
