--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,11 +89,11 @@ jobs:
       - name: Publish java client for merge to develop branch
         working-directory: codegen_java
         id: publishJavaClient
-        if: ${{ github.head_ref == 'develop' }}
+        if: ${{ github.ref_name == 'develop' }}
         run: sbt "+ publish" -Dproject.isSnapshot=false
 
       - name: Publish java client as snapshot for PRs
         working-directory: codegen_java
         id: publishJavaClientSnapshot
-        if: ${{ github.head_ref != 'develop' }}
+        if: ${{ github.ref_name != 'develop' }}
         run: sbt "+ publish" -Dproject.isSnapshot=true
