ID-623 Signed URL Query Params and Requester Pays Support

--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -3001,6 +3001,9 @@ components:
         blobName:
           type: string
           description: path to the blob in the bucket
+        duration:
+          type: number
+          description: Optional validity duration of the link in minutes. Defaults to 1 hour.
     CreateResourceRequest:
       required:
         - policies
