--- a/.github/workflows/verify_consumer_pacts.yml
+++ b/.github/workflows/verify_consumer_pacts.yml
@@ -21,7 +21,7 @@ on:
       - 'README.md'
   push:
     branches:
-      - QA-2069
+      - develop
     paths-ignore:
       - 'README.md'
   workflow_dispatch:
@@ -148,24 +148,31 @@ jobs:
           echo "git rev-parse HEAD"
           git rev-parse HEAD
 
-      - name: Cache dependencies
+      - name: Cache SBT dependencies
         uses: actions/cache@v3
         with:
-          path: ~/.ivy2/cache
-          key: ${{ runner.os }}-ivy2-${{ hashFiles('**/*.sbt') }}
+          path: |
+            ~/.ivy2/cache
+            ~/.sbt/boot
+          key: v1-${{ runner.os }}-sbt-${{ hashfiles('**/*.sbt') }}
+          restore-keys: |
+            v1-${{ runner.os }}-sbt-
 
-      - name: Cache sbt plugins
+      - name: Cache SBT plugins
         uses: actions/cache@v3
         with:
           path: ~/.sbt/1.0/plugins
-          key: ${{ runner.os }}-sbt-plugins-${{ hashFiles('**/*.sbt') }}
+          key: ${{ runner.os }}-sbt-plugins-${{ hashFiles('**/project/plugins.sbt') }}
+          restore-keys: |
+            ${{ runner.os }}-sbt-plugins-
+
+      - uses: olafurpg/setup-scala@v11
+        with:
+          java-version: openjdk@1.17
 
       - name: Verify consumer pacts and publish verification status to Pact Broker
-        uses: docker://sbtscala/scala-sbt:openjdk-17.0.2_1.7.2_2.13.10
-        with:
-          args: |
-            project pact4s
-            testOnly *SamProviderSpec
+        run: |
+          sbt "project pact4s" "testOnly *SamProviderSpec"
 
   can-i-deploy: # The can-i-deploy job will run as a result of a Sam PR. It reports the pact verification statuses on all deployed environments.
     runs-on: ubuntu-latest
