--- a/.github/workflows/verify_consumer_pacts.yml
+++ b/.github/workflows/verify_consumer_pacts.yml
@@ -162,9 +162,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.sbt/1.0/plugins
-          key: ${{ runner.os }}-sbt-plugins-${{ hashFiles('**/project/plugins.sbt') }}
+          key: v1-${{ runner.os }}-sbt-plugins-${{ hashFiles('**/project/plugins.sbt') }}
           restore-keys: |
-            ${{ runner.os }}-sbt-plugins-
+            v1-${{ runner.os }}-sbt-plugins-
 
       - uses: olafurpg/setup-scala@v11
         with:
