--- a/.github/workflows/verify_consumer_pacts.yml
+++ b/.github/workflows/verify_consumer_pacts.yml
@@ -177,6 +177,7 @@ jobs:
 
       - name: Verify consumer pacts and publish verification status to Pact Broker
         run: |
+          echo "provider-sha=${{ env.PROVIDER_SHA }}" >> $GITHUB_OUTPUT
           sbt "project pact4s" "testOnly *SamProviderSpec"
 
   can-i-deploy: # The can-i-deploy job will run as a result of a Sam PR. It reports the pact verification statuses on all deployed environments.
