--- a/.github/workflows/verify_consumer_pacts.yml
+++ b/.github/workflows/verify_consumer_pacts.yml
@@ -234,7 +234,7 @@ jobs:
                           -e PACT_BROKER_USERNAME=${{ secrets.PACT_BROKER_USERNAME }} \
                           -e PACT_BROKER_PASSWORD=${{ secrets.PACT_BROKER_PASSWORD }} \
                           sbtscala/scala-sbt:openjdk-17.0.2_1.7.2_2.13.10 \
-                          sbt "clean" "compile" "project pact4s" "testOnly *SamProviderSpec"
+                          sbt "set scalafmtOnCompile := false" "project pact4s" "testOnly *SamProviderSpec"
 
       - name: Check directories to be cached
         run: |
