--- a/.github/workflows/verify_consumer_pacts.yml
+++ b/.github/workflows/verify_consumer_pacts.yml
@@ -277,16 +277,15 @@ jobs:
 
       - name: Check directories to be cached
         run: |
-          cloc="~/.cache"
           ls -l ~/.sbt
-          ls -l $cloc
-          ls -l $cloc/coursier
-          ls -l $cloc/coursier/v1
-          ls -l $cloc/coursier/v1/https
-          ls -l $cloc/coursier/v1/https/repo1.maven.org
-          ls -l $cloc/coursier/v1/https/repo1.maven.org/maven2
-          ls -l $cloc/coursier/v1/https/repo.scala-sbt.org
-          ls -l $cloc/coursier/v1/https/artifactory.broadinstitute.org
+          ls -l ~/.cache
+          ls -l ~/.cache/coursier
+          ls -l ~/.cache/coursier/v1
+          ls -l ~/.cache/coursier/v1/https
+          ls -l ~/.cache/coursier/v1/https/repo1.maven.org
+          ls -l ~/.cache/coursier/v1/https/repo1.maven.org/maven2
+          ls -l ~/.cache/coursier/v1/https/repo.scala-sbt.org
+          ls -l ~/.cache/coursier/v1/https/artifactory.broadinstitute.org
 
   can-i-deploy: # The can-i-deploy job will run as a result of a Sam PR. It reports the pact verification statuses on all deployed environments.
     runs-on: ubuntu-latest
