--- a/.github/workflows/verify_consumer_pacts.yml
+++ b/.github/workflows/verify_consumer_pacts.yml
@@ -171,7 +171,7 @@ jobs:
 
       - name: Check coursier-cache hit
         run: |
-          cloc="~/.cache"
+          cloc=~/.cache
           if [ "${{ steps.coursier-cache.outputs.cache-hit }}" == 'true' ]; then
             echo "Coursier $cloc restored!"
             ls -l $cloc
