--- a/.github/workflows/verify_consumer_pacts.yml
+++ b/.github/workflows/verify_consumer_pacts.yml
@@ -290,8 +290,8 @@ jobs:
                           -e CONSUMER_BRANCH=${{ env.CONSUMER_BRANCH }} \
                           -e CONSUMER_SHA=${{ env.CONSUMER_SHA }} \
                           -e PACT_BROKER_URL=${{ env.PACT_BROKER_URL }} \
-                          -e PACT_BROKER_USERNAME=${{ secrets.PACT_BROKER_USERNAME }} \
-                          -e PACT_BROKER_PASSWORD=${{ secrets.PACT_BROKER_PASSWORD }} \
+                          -e PACT_BROKER_USERNAME=${{ env.PACT_BROKER_USERNAME }} \
+                          -e PACT_BROKER_PASSWORD=${{ env.PACT_BROKER_PASSWORD }} \
                           sbtscala/scala-sbt:openjdk-17.0.2_1.7.2_2.13.10 \
                           sbt "set scalafmtOnCompile := false" "project pact4s" "testOnly *SamProviderSpec"
 
