--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -144,7 +144,8 @@ resourceTypes = {
         roleActions = ["read_policies", "share_policy::owner", "share_policy::application", "share_policy::writer", "share_policy::reader"]
       }
       project-owner = {
-        # This role is used for display purposes, but otherwise grants the same actions as the owner role.
+        # This role is used for display purposes and to prevent owners from removing project-owners,
+        # but otherwise grants the same actions as the owner role on workspaces.
         roleActions = []
         includedRoles = ["owner"]
       }
