Add owner as included role to project-owner (WOR-522). (#1093)
* Add owner as included role to project-owner (WOR-522).

* Update comment

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -144,8 +144,10 @@ resourceTypes = {
         roleActions = ["read_policies", "share_policy::owner", "share_policy::application", "share_policy::writer", "share_policy::reader"]
       }
       project-owner = {
-        # this role is used for display purposes but does not confer additional actions, use in conjunction with owner role
+        # This role is used for display purposes and to prevent owners from removing project-owners,
+        # but otherwise grants the same actions as the owner role on workspaces.
         roleActions = []
+        includedRoles = ["owner"]
       }
       owner = {
         roleActions = ["delete", "read_policies", "share_policy::owner", "share_policy::application", "share_policy::writer", "share_policy::reader", "share_policy::discoverer", "own", "write", "read", "discover", "compute", "share_policy::share-reader", "share_policy::share-writer", "share_policy::can-compute", "share_policy::can-catalog", "read_auth_domain", "create_controlled_user_shared", "create_controlled_user_private", "create_referenced_resource", "update_referenced_resource", "delete_referenced_resource", "list_children", "remove_child", "add_child", "migrate", "view_migration_status"]
